--- a/.github/workflows/compiler.yaml
+++ b/.github/workflows/compiler.yaml
@@ -6,7 +6,6 @@ on:
       - '**'
 
 env:
-  MAVEN_OPTS: "-Xmx4G -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
   IS_OWN_PR: "${{ secrets.MAVEN_MIRROR_URL }}"
 
 jobs:
@@ -14,10 +13,10 @@ jobs:
     name: "Compiler Tests (${{matrix.run}})"
     if: ${{ !(github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '[maven-release-plugin]')) }}
     # needs: [test-linux] # CHANGED w.r.t buid.yaml
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: buildjet-2vcpu-ubuntu-2204
     strategy: # CHANGED w.r.t. buildyaml
         matrix:
-            run: [1, 2, 3, 4, 5, 6] # based on 50% failure rate, this gives us ~1% chance of a false negative
+            run: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
     env:
       MAVEN_OPTS: "-Xmx512M -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
     steps: 
