Exclude target from search

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,9 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "search.exclude": {
+       "/target/": true,
+    }, 
     "configurations": [
         {
             "type": "java",
