--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
                 <artifactId>rascal-maven-plugin</artifactId>
                 <version>${rascal-maven.version}</version>
                 <configuration>
-                    <bootstrapRascalVersion>0.42.0-RC1-BOOT</bootstrapRascalVersion>
+                    <bootstrapRascalVersion>0.42.0-RC1</bootstrapRascalVersion>
                     <parallel>true</parallel>
                     <parallelPreChecks>
                         <pre>${project.basedir}/src/org/rascalmpl/library/Prelude.rsc</pre>
